fix spacing

--- a/website/pages/home/home.module.scss
+++ b/website/pages/home/home.module.scss
@@ -139,7 +139,7 @@
   margin-bottom: mobile-vw(160px);
 
   @include desktop {
-    margin-bottom: desktop-vw(400px);
+    margin-bottom: desktop-vw(640px);
   }
 
   .sticky {
